// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Tabber component render a Tabber component 1`] = `
<Tabber>
  <div
    className="tabber"
  >
    <div
      className="tabber__navigation"
    >
      <a
        className="tabber__link is-active"
        key="status"
        onClick={[Function]}
      >
        Status
      </a>
      <a
        className="tabber__link "
        key="note"
        onClick={[Function]}
      >
        Notes
      </a>
    </div>
    <Tab
      button="Status"
      key="status"
    >
      <div
        className="tab"
      />
    </Tab>
  </div>
</Tabber>
`;

exports[`Test Tabber component2 render a Tabber component 1`] = `
<Tabber>
  <div
    className="tabber"
  >
    <div
      className="tabber__navigation"
    >
      <a
        className="tabber__link is-active"
        key="status"
        onClick={[Function]}
      >
        Status
      </a>
      <a
        className="tabber__link "
        key="note"
        onClick={[Function]}
      >
        Notes
      </a>
    </div>
    <Tab
      button="Status"
      key="status"
    >
      <div
        className="tab"
      >
        <span>
          inside status
        </span>
      </div>
    </Tab>
  </div>
</Tabber>
`;
